[gd_scene load_steps=2 format=3 uid="uid://csd4bul22od8h"]

[ext_resource type="Script" uid="uid://d2tkcrv0ob8fm" path="res://Script/script_panel_puse.gd" id="1_4gf3s"]

[node name="PanelPuse" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_4gf3s")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.3137255)

[node name="Panel" type="Panel" parent="ColorRect"]
custom_minimum_size = Vector2(600, 800)
layout_mode = 0
offset_left = 664.0
offset_top = 128.0
offset_right = 1264.0
offset_bottom = 928.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Panel"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 0
offset_left = 88.0
offset_top = 64.0
offset_right = 488.0
offset_bottom = 664.0
theme_override_constants/separation = 8

[node name="ContinueButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Continue"

[node name="RetryButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Retry"

[node name="BackButton" type="Button" parent="ColorRect/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="ColorRect/Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
